--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,7 @@ ADD_CUSTOM_TARGET(
 
 ADD_CUSTOM_TARGET(
     model_checks
-    COMMAND make
+    COMMAND RCPR_INCLUDEDIR=${RCPR_INCLUDEDIR} make
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/models)
 
 if (MODELCHECK_REQUIRED)
