decl for metadata_create.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,8 +36,10 @@ SET(NEPE2BASE_SOURCES
     ${NEPE2BASE_SECURE_BUFFER_SOURCES})
 
 #test source files
+AUX_SOURCE_DIRECTORY(test/metadata NEPE2BASE_TEST_METADATA_SOURCES)
 AUX_SOURCE_DIRECTORY(test/secure_buffer NEPE2BASE_TEST_SECURE_BUFFER_SOURCES)
 SET(NEPE2BASE_TEST_SOURCES 
+    ${NEPE2BASE_TEST_METADATA_SOURCES}
     ${NEPE2BASE_TEST_SECURE_BUFFER_SOURCES})
 
 ADD_LIBRARY(nepe2base STATIC
