Decl for metadata structure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,10 @@ INCLUDE_DIRECTORIES(include)
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)
 
 #source files
+AUX_SOURCE_DIRECTORY(src/metadata NEPE2BASE_METADATA_SOURCES)
 AUX_SOURCE_DIRECTORY(src/secure_buffer NEPE2BASE_SECURE_BUFFER_SOURCES)
 SET(NEPE2BASE_SOURCES
+    ${NEPE2BASE_METADATA_SOURCES}
     ${NEPE2BASE_SECURE_BUFFER_SOURCES})
 
 #test source files
